--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -23,8 +23,8 @@ FROM node:24-alpine
 
 WORKDIR /app
 
-# 安装 nginx 和 supervisor
-RUN apk add --no-cache nginx supervisor && \
+# 安装 nginx、supervisor 和构建工具（better-sqlite3 需要编译）
+RUN apk add --no-cache nginx supervisor python3 make g++ && \
     mkdir -p /var/lib/nginx/logs /var/log/nginx && \
     npm config set registry https://registry.npmmirror.com/ && \
     yarn config set registry https://registry.npmmirror.com/ && \
@@ -39,7 +39,9 @@ COPY --from=builder /app/yarn.lock ./
 COPY --from=builder /app/scripts/web /usr/share/nginx/html
 
 # 只安装生产依赖
-RUN yarn install --frozen-lockfile --production
+RUN yarn install --frozen-lockfile --production && \
+    # 清理构建工具以减小镜像体积
+    apk del python3 make g++
 
 # 配置 nginx
 RUN cat > /etc/nginx/http.d/default.conf << 'EOF'
